--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="site-section-cover">
   <div class="container">
     <div class="row align-items-center text-left justify-content-center">
-      <div class="col-lg-7 mr-auto">
+      <div class="col-lg-7 mr-auto pt-5 mt-5">
         <h1 class="text-black mb-4">{{ page.title }}</h1>
         <p class="lead text-muted">{{ page.date | date: "%B %e, %Y" }}</p>
       </div>
@@ -12,10 +12,13 @@ layout: default
   </div>
 </div>
 
-<div class="site-section">
+<div class="site-section pt-0">
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
+        {% if page.image %}
+        <img src="{{ page.image | relative_url }}" alt="{{ page.title }}" class="img-fluid mb-5">
+        {% endif %}
         {{ content }}
       </div>
     </div>
